Fix header not showing on top

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
 
 .centered-container--sticky {
     position: sticky;
+    z-index: 10;
     top: -1px;
 
     height: 100%;
